# Jiopc-testing-agent

./: .gitignore  DEMO.md  README.md  SPEC.md  analyse.py  design.md  jiopc-agent.yaml  jiopc_agent.py  pyproject.toml
benchmarks/: REPORT.md  run_benchmarks.sh
ci/: github-actions-example.yml
packaging/: build-deb.sh
packaging/deb/: control  postinst
packaging/debroot/DEBIAN/: control  prerm
packaging/debroot/opt/jiopc-testing-agent/: INSTALL.md  README.md  design.md  jiopc-agent.yaml
packaging/debroot/opt/jiopc-testing-agent/prompts/: analyse_log.txt
packaging/debroot/opt/jiopc-testing-agent/src/jiopc_agent/: __main__.py  analyse_cli.py  history.py  part_a_web.py  part_b_native.py  part_c_presence.py  (+1 more)
samples/: analysis_SAMPLE.md
screenshots/: README.md
src/jiopc_agent/: __init__.py  cli.py  config.py  desktop_entry.py  notify.py  part_a_web.py  runlog.py  runner.py  selfwatch.py
tests/: _helpers.py  conftest.py  fixture-config.yaml  test_analyse.py  test_config.py  test_desktop_entry.py  test_end_to_end.py  test_part_a.py  test_part_b.py  test_part_c.py  test_runlog.py
tests/fixtures/: fake_app.py
tests/fixtures/desktop_tree/Desktop/Games/: fixture-paint.desktop  org.fixture.Chess.desktop
tests/fixtures/desktop_tree/Desktop/Productivity/: fixture-calc.desktop  fixture-writer.desktop
tests/fixtures/desktop_tree/applications/: fixture-calc.desktop  fixture-fakeapp.desktop  fixture-paint.desktop  fixture-writer.desktop  org.fixture.Chess.desktop
tests/fixtures/web/: blank.html  captcha.html  missing-elements.html  ok.html  slow.html
